<resources>
    <string name="app_name">LevelHealth</string>
    <string name="Hello">Добро пожаловать!</string>
    <string name="registration">Регистрация</string>
    <string name="confirm_number">Подтвердить номер телефона</string>
    <string name="enter">Войти</string>
    <string name="recovery">Восстановление пароля</string>
    <string name="sendCode">Отправить код</string>
    <string name="confirmation">Подтверждение</string>
    <string name="confirm">Подтвердить</string>
    <string name="sendSMSAgain">Отправить СМС еще раз</string>
    <string name="notification_today">Сегодня</string>
    <string name="mood_today">Настроение</string>
    <string name="sleep_today">Сон</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <string name="notification_header">Включите уведомления</string>
    <string name="notification_descr">С помощью уведомлений, вы можете получить важную информацию</string>
    <string name="notification_pills">Приём лекарств</string>
    <string name="notification_pills_descr">В 12:00 не забудьте выпить ХХХХ</string>
    <string name="notification_add">Внесение показателей</string>
    <string name="notification_add_descr">Как вы себя чувтсвовали сегодня? </string>
    <string name="notification_on_btn">Включить уведомления</string>
    <string name="notification_not_btn">Не сейчас</string>
    <string name="notification_img_descr">app logo</string>
    <string name="confirm_email">Подтвердить почту</string>
    <string name="new_pass">Введите новый пароль</string>
    <string name="reset_pass">Сбросить пароль</string>
    <string name="headache">Головная боль</string>
    <string name="add_pill">Добавление лекарства</string>
    <string name="pill_name">Название лекарства</string>
    <string name="pills">Лекарства</string>
    <string name="pill_time">Время</string>
    <string name="pill_dose">Дозировка</string>
    <string name="hidden_pills">Скрытые лекарства</string>
    <string name="add">Добавить</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="comment">Комментарий</string>
    <string name="taking_pills">Приём лекарств</string>
    <string name="taking_start">Начало приёма</string>
    <string name="taking_days">Дни приёма</string>
    <string name="everyday">Каждый день</string>
    <string name="add_note">Добавить заметку</string>
    <string name="menu_user_name">Имя Фамилия</string>
    <string name="menu_user_date">дд.мм.гггг</string>
    <string name="menu_user_mail">pochta@gmail.com</string>
    <string name="menu_user_change">Изменить данные</string>
    <string name="menu_user_logout">Выйти</string>
    <string name="menu_user_reports">Отчеты</string>
    <string name="menu_user_settings">Настройки</string>
    <string name="menu_user_noteall">Заметки</string>
    <string name="calendar_comment">Ох уж этот день</string>
    <string name="settings">Настройки</string>
    <string name="done">Готово</string>
    <string-array name="taking_days_spinner">
        <item>Выбрать день</item>
        <item>Каждый день</item>
        <item>По определенным дням</item>
        <item>В течение дня</item>
        <item>Курс</item>
    </string-array>
    <string name="terms_of_service">Я даю <font color='#018C8B'><u>согласие на храние и обработку персональных данных</u></font></string>
    <string name="consentText1">Пользовательское соглашение</string>
    <string name="first_general_terms"><b>1. Общие положения</b></string>
    <string name="consentText1.1">1.1. Настоящий Договор является публичным договором (публичной офертой) на основании пункта 2 статьи 437 Гражданского Кодекса Российской Федерации Общества с ограниченной ответственностью «LevelHealth», действующего на основании устава, именуемого в дальнейшем «Исполнитель», любому правоспособному и дееспособному физическому лицу, достигшему 18 лет, выразившему готовность воспользоваться услугами Исполнителя и принявшему условия настоящего Договора публичной оферты. После принятия изложенных ниже условий и началом пользования Сервисом, лицо, производящее акцепт этой оферты, становится Пользователем.</string>
    <string name="consentText1.2">1.2. Полным и безоговорочным акцептом настоящей публичной оферты считается факт начала пользования Сервисом и регистрация на Сервисе.</string>
    <string name="consentText1.3">1.3. Публичный договор, совершённый в вышеописанном порядке, считается заключённым в простой письменной форме, не требует оформления на бумажном носителе и обладает полной юридической силой.</string>
    <string name="consentText1.4">1.4. С момента совершения акцепта Пользователь считается ознакомившийся и согласившимся с настоящей публичной офертой и, в соответствии с Гражданским Кодексом РФ, считается вступившим с Исполнителем в договорные отношения в соответствии с условиями Договора.</string>
    <string name="consentText1.5">1.5. Исполнитель имеет право в любой момент изменять условия предоставления услуг и условия Договора в одностороннем порядке без предварительного согласования с Пользователем, обеспечивая при этом публикацию изменённых условий на Сервисе не менее, чем за один день до их ввода в действие.</string>
    <string name="terms_and_definitions"><b>2. Термины и определения</b></string>
    <string name="consentText2.0">В целях Договора Стороны согласились использовать следующие термины и определения:</string>
    <string name="consentText2.1">2.1. «Сервис» - разработанная Исполнителем онлайн платформа (программный комплекс) «LevelHealth», позволяющая отслеживать показания своего здоровья.</string>
    <string name="consentText2.2">2.2. «Пользователь» – физическое лицо, обладающее полной право — и дееспособностью, достигшее 18 лет, являющееся заказчиком в соответствии с настоящим Договором.</string>
    <string name="consentText2.3">2.3. «Личный кабинет» – персональная страница Пользователя на Сервисе, доступ к которой предоставляется Пользователю после регистрации. Логином для входа в Личный кабинет является телефонный номер Пользователя (далее - «логин»), а паролем — автоматически сгенерированный Сервисом одноразовый пароль, который направляется на телефонный номер Пользователя каждый раз в момент входа на Сервис (далее – «пароль»). Личный кабинет содержит анкету, обязательную для заполнения Пользователем.</string>
    <string name="subject_of_the_contract"><b>3. Предмет Договора</b></string>
    <string name="consentText3.1">3.1. Предметом Договора является предоставление Исполнителем Пользователю доступа к функциональным возможностям Сервиса, позволяющим отслеживать необходимы показания касающиеся здоровья заказчика.</string>
    <string name="consentText3.2">3.2. Функциональные возможности Сервиса для Пользователя:</string>
    <string name="consentText3.2.1">3.2.1. Неограниченный доступ к Личному кабинету Пользователя.</string>
    <string name="consentText3.3">3.3. Пользователь полностью осознает, что Исполнитель может в любой момент отказать в предоставлении доступа к Сервису, в случае нарушения Пользователем условий настоящего Договора, а также в любых иных случаях, в том числе, и без объяснения причин.</string>
    <string name="consentText3.4">3.4. Для пользования Сервисом Пользователь должен обеспечить наличие следующего оборудования и программного обеспечения:</string>
    <string name="consentText3.4.1"><b>•</b> мобильное устройство:
        \n<b>•</b> под управлением Android версии 7.x и выше и мобильная версия браузера Chrome не ниже 81.0.4044.138;
        \n<b>•</b> стабильный интернет-канал с входящей и исходящей скоростью не менее 4 мегабита в секунду в каждом направлении</string>
    <string name="consentText3.5">3.5. Сервис предоставляется «как есть» и «при наличии», то есть без любых прямых или косвенных заверений или гарантий. Исполнитель не гарантирует и не делает никаких заявлений относительно безопасности Сервиса. Пользователь подтверждает, что любая передаваемая посредством Сервиса информация может быть перехвачена в процессе передачи или иным образом. Исполнитель не гарантирует, что Сервис не содержит вирусов или других вредоносных элементов. Использование Сервиса осуществляется Пользователем по своему решению и на свой риск при условии, что Пользователь несёт исключительную ответственность за любой ущерб, причинённый компьютерной системе Пользователя, за потерю данных или иной вред, причинённый в результате такой деятельности.</string>
    <string name="rights_and_obligations_of_the_contractor"><b>4. Права и обязанности Исполнителя</b></string>
    <string name="consentText4.1">4.1. Исполнитель обязан:</string>
    <string name="consentText4.1.1">4.1.1. Предоставлять доступ к функциональным возможностям Сервиса в соответствии с условиями настоящего Договора, после регистрации Пользователя на Сервисе и первичного заполнения Пользователем анкеты в Личном кабинете.</string>
    <string name="consentText4.1.2">4.1.2. По запросу Пользователя давать Пользователю разъяснения по вопросам пользования Сервисом.</string>
    <string name="consentText4.2">4.2. Права Исполнителя:</string>
    <string name="consentText4.2.1">4.2.1. Самостоятельно определять функциональные возможности Сервиса, изменять или вносить новые функциональные возможности Сервиса без предварительного согласования с Пользователем.</string>
    <string name="consentText4.2.2">4.2.2. Требовать от Пользователя предоставления информации о его текущем состоянии путём заполнения анкеты в Личном кабинете.</string>
    <string name="consentText4.2.3">4.2.3. Отказать в доступе к Сервису и расторжении Договора по любым основанием, в том числе без объяснения причин, в случае невыполнения или ненадлежащего выполнения Пользователем своих обязательств по Договору.</string>
    <string name="rights_and_obligations_of_the_user"><b>5. Права и обязанности Пользователя</b></string>
    <string name="consentText5.1">5.1. Пользователь обязан:</string>
    <string name="consentText5.1.1">5.1.1. Предоставлять Исполнителю по запросу, а также путём заполнения анкеты в Личном кабинете, достоверные сведения и данные, необходимые для надлежащего исполнения Исполнителем своих обязательств. При заключении Договора Пользователь обязан зарегистрироваться на Сервисе, получить доступ к Личному кабинету, произвести первичное заполнение размещённой в нем анкеты.</string>
    <string name="consentText5.1.2">5.1.2. Не воспроизводить, не копировать, не распространять, а также не использовать любым иным способом, в каких бы то ни было целях, содержимое Сервиса, за исключением личного использования в рамках настоящего Договора.</string>
    <string name="consentText5.1.3">5.1.3. Не осуществлять действия по размещению на Сервисе рекламной информации, а также любых незаконных, дискредитирующих, несущих угрозу сообщений или сообщений, противоречащих законодательству Российской Федерации.</string>
    <string name="consentText5.1.4">5.1.4. Не передавать логин и пароль к своему Личному кабинету любым третьим лицам, стремиться обеспечить секретность указанных логина и пароля. В случае несоблюдения указанного условия (включая случаи утечки информации о логине и пароле против воли Пользователя) Исполнитель не несёт какой-либо ответственности за предоставления доступа в Личному кабинету Пользователя лицу, любым способом получившему логин и пароль Пользователя, за разглашение конфиденциальных данных Пользователя и не обязан компенсировать ущерб Пользователя, вызванный таким нарушением.</string>
    <string name="consentText5.1.5">5.1.5. Незамедлительно уведомить Исполнителя о случаях утери либо хищения логина и/или пароля к Личному кабинету Пользователя.</string>
    <string name="consentText5.2">5.2. Права Пользователя:</string>
    <string name="consentText5.2.1">5.2.1. Требовать от Исполнителя надлежащего исполнения обязанностей по настоящему Договору.</string>
</resources>