<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_background" />


    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="212dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="705dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/style_button_stroke_text"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/registration"
        android:textColor="@color/stroke_text"
        android:textSize="14sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/Hello"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:text="@string/Hello" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="277dp"
        android:text="E-mail"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:paddingLeft="18dp"
        android:background="@drawable/edit_number_style"
        android:textColor="@color/black_new"
        android:textSize="12sp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="347dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="357dp"
        android:text="Пароль"
        android:paddingTop="24dp"
        android:paddingBottom="20dp"
        android:paddingLeft="18dp"
        android:background="@drawable/edit_number_style"
        android:textColor="@color/black_new"
        android:textSize="12sp"
        android:ems="10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="453dp"
        android:layout_weight="1"
        android:background="@drawable/style_button_stroke_text"
        android:textColor="@color/stroke_text"
        android:textSize="16sp"
        android:text="@string/enter" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="748dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@color/stroke_text"
        android:textSize="10sp"
        android:text="Забыли пароль?" />

</RelativeLayout>