<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_background" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="681dp"
        android:layout_weight="1"
        android:background="@drawable/style_button_stroke_text"
        android:fontFamily="@font/inter_semibolt"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/registration"
        android:textColor="@color/stroke_text"
        android:textSize="14sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="176dp"
        android:text="@string/Hello"
        android:textSize="24sp"
        tools:text="@string/Hello"
        android:fontFamily="@font/inter_semibolt"
        android:textColor="@color/text_color_2"/>




    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:text="+7 *** *** ** **"
        android:paddingTop="18.5dp"
        android:paddingBottom="18.5dp"
        android:paddingLeft="24dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="248dp"
        android:textColor="@color/black_new"
        android:background="@drawable/field"
        android:elevation="16dp"
        android:inputType="number"
        android:ems="10"
        />


    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="328dp"
        android:text="Пароль"
        android:paddingTop="18.5dp"
        android:paddingBottom="18.5dp"
        android:paddingLeft="24dp"
        android:background="@drawable/field"
        android:textColor="@color/black_new"
        android:textSize="16sp"
        android:elevation="16dp"
        android:inputType="textPassword"
        android:ems="10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="156dp"
        android:layout_height="35dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="448dp"
        android:layout_weight="1"
        android:background="@drawable/style_button_stroke_text"
        android:textColor="@color/stroke_text"
        android:fontFamily="@font/inter_semibolt"
        android:textSize="14sp"
        android:text="@string/enter" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="732dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:textColor="@color/stroke_text2"

        android:textSize="11sp"
        android:text="Забыли пароль?" />


</RelativeLayout>
